# chatdba

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docs/: case.md  fault-diagnosis-todo.md  提示词.md  智能诊断.yml
examples/: complete_sql_optimization_call_case.md  complete_sql_optimization_call_case.py  seed_optimization_cases.sql
migrations/: 001_initial.sql  002_agent_token_usage.sql  003_fault_cmdb_hosts.sql
migrations/mysql/: 001_fault_cmdb_hosts.sql
scripts/: backfill_case_embeddings.py  run-local-checks.sh
src/chatdba.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/integration/: test_api_task_creation.py  test_dingtalk_e2e_flow.py  test_dingtalk_sdk_callback_flow.py  test_prometheus_mcp_server.py  test_streaming_contract.py  test_workflow_happy_path.py
tests/unit/: test_case_match_reason.py  test_case_repository.py  test_case_retriever.py  test_dingtalk_channel.py  test_dingtalk_handler.py  test_dingtalk_rendering.py  test_dingtalk_responder.py  test_dingtalk_runner.py  test_dingtalk_runtime.py  test_dingtalk_runtime_builder.py  test_dingtalk_sdk_runtime.py  test_dingtalk_sender.py  test_explain_parser.py  test_fault_agents.py  test_fault_cmdb.py  test_fault_diagnosis_task_service.py  test_fault_diagnosis_worker.py  test_fault_diagnosis_workflow.py  test_fault_runtime.py  test_health.py  test_metadata_router.py  test_mysql_collector.py  test_mysql_rules.py  test_optimization_task_service.py  test_pgvector_case_retriever.py  test_sql_parser.py  (+13 more)
(+83 files in other folders)
