[project]
name = "chatdba"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=0.2.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.0",
  "redis>=5.0.0",
  "sqlglot>=25.0.0",
  "pymysql>=1.1.0",
  "openai>=1.40.0",
  "dingtalk-stream>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.0",
  "httpx>=0.27.0",
]

[project.scripts]
chatdba-dingtalk = "chatdba.dingtalk.runner:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
